# DMX512-Pico

./: .gitignore  README.md
arduino/: README.md  code.c
c/: CMakeLists.txt  dmx_receiver.c
python/: main.py  test-lcd.py  test-rs485-receiver.py  test-tft.py
rpipico/micropython/: test-rs485-sender.py
